# qoqo_calculator_pyo3

./: .gitignore  Cargo.toml  README.md
.build_action/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: build_and_deploy.yml  ci_tests.yml
python_tests/: test_calculator.py  test_calculator_complex.py  test_calculator_float.py
qoqo_calculator_pyo3/: LICENSE_FOR_BINARY_DISTRIBUTION  NOTICE  __init__.py
src/: calculator.rs  calculator_complex.rs  calculator_float.rs  lib.rs
